# upstream-alert

./: README.md  pyproject.toml
skills/claude-code/: SKILL.md
skills/gemini/: SKILL.md
skills/openclaw/: SKILL.md  _meta.json
skills/openclaw/scripts/: check_risk.py
src/upstream_alert/: __init__.py  analyzer.py  cli.py  engine.py  models.py
src/upstream_alert/sources/: __init__.py  comtrade.py  fbx.py  fred.py  gdelt.py  newsdata.py  worldbank.py  yahoo_finance.py
tests/: test_e2e_smoke.py  test_engine.py  test_models.py  test_sources.py  test_yahoo_finance.py
